trying to fix navbar menu items alignment

--- a/src/App.css
+++ b/src/App.css
@@ -309,8 +309,7 @@ nav.navbar .menuText {
   /* Flexbox for menu items */
   justify-content: space-between;
   /* Evenly spaces out menu items */
-  align-items: center;
-  /* Center aligns items vertically */
+  align-items: right;
   width: 100%;
   /* Ensures it takes up the remaining space */
   padding-left: 30px;
